k8s/tekton/00-minimal-noncrd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-pipelines-controller
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-pipelines-controller
  template:
    metadata:
      labels:
        app: tekton-pipelines-controller
    spec:
      serviceAccountName: tekton-pipelines-controller
      # If your registry requires credentials, create an imagePullSecret
      # and add it here (example in README):
      # imagePullSecrets:
      #   - name: quay-reg
      containers:
        - name: tekton-pipelines-controller
          image: quay.io/tektoncd/pipeline/cmd/controller:v1.5.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
